--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>пёсель</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="icon" href="/favicon.ico">
 </head>
 <body bgcolor="#ffe8cf">
     <h1 align="center">Собаки</h1>
