The second page of the website and adding style.css
Removing favicon, general editing of index.html, adding about.html and style.css

--- a/index.html
+++ b/index.html
@@ -3,38 +3,39 @@
 <head>
     <title>пёсель</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body bgcolor="#ffe8cf">
-    <h1 align="center">Собаки</h1>
+<body>
+    <h1>Собаки</h1>
     <img src="image/dog.jpg" style="float: left; margin: 0 30px 20px 0;" width="30%">
-    <h3 align="left">Самые популярные породы собачек</h3>
-    <ol><i>
-        <li>Немецкий шпиц</li>
-        <li>Чихуахуа</li>
-        <li>Вельш-корги пемброк</li>
-        <li>Немецкая овчарка</li>
-        <li>Йоркширский терьер</li>
-        <li>Лабрадор-ретривер</li>
-        <li>Среднеазиатская овчарка</li>
-        <li>Джек-рассел-терьер</li>
-        <li>Французский бульдог</li>
-        <li>Пудель</li>
-        <li>Кавалер-кинг-чарльз-спаниель</li>
-        <li>Сиба</li>
-        <li>Золотистый ретривер</li>
-        <li>Ротвейлер</li>
-        <li>Бигль</li>
-    </i></ol>
+    <h2>Самые популярные породы собачек:</h2>
+    <ol><il></il>
+        <li><excerpt>Немецкий шпиц</excerpt></li>
+        <li><excerpt>Чихуахуа</excerpt></li>
+        <li><excerpt>Вельш-корги пемброк</excerpt></li>
+        <li><excerpt>Немецкая овчарка</excerpt></li>
+        <li><excerpt>Йоркширский терьер</excerpt></li>
+        <li><excerpt>Лабрадор-ретривер</excerpt></li>
+        <li><excerpt>Среднеазиатская овчарка</excerpt></li>
+        <li><excerpt>Джек-рассел-терьер</excerpt></li>
+        <li><excerpt>Французский бульдог</excerpt></li>
+        <li><excerpt>Пудель</excerpt></li>
+        <li><excerpt>Кавалер-кинг-чарльз-спаниель</excerpt></li>
+        <li><excerpt>Сиба</excerpt></li>
+        <li><excerpt>Золотистый ретривер</excerpt></li>
+        <li><excerpt>Ротвейлер</excerpt></li>
+        <li><excerpt>Бигль</excerpt></li>
+    </il></ol>
     <br>
     <br>
     <img src="https://sun9-25.userapi.com/s/v1/if2/bH9_JHkW42WWW4LwW6YaKShkCjKbcmrf2dO1rxG_DionCI2KA1ADckBSePn5aEOm5sUGa6bGV23iuGjsMCtl5ci5.jpg?quality=96&as=32x24,48x36,72x54,108x81,160x120,240x180,360x270,480x360,540x405,640x480,720x540,807x605&from=bu&cs=640x0" style="float: right; margin: 0 30px 20px 0;" width="35%">
-    <p><font size="3" color="brown" face="Arial"><b><u>Собачки</u></b></font> — одни из самых преданных животных на свете. Они чувствуют настроение хозяина, лают от радости, виляют хвостом и облизывают руки. Даже молча говорят: «Я с тобой». Собаки бывают разных пород: маленькие, как <b>той-терьеры</b>, и огромные, как <b>ньюфаундленды</b>. Одни — охранники, другие — компаньоны, третьи — помощники. Они учат нас ответственности, заботе и бескорыстной любви. Собака не смотрит на твои ошибки — она просто рядом. С ней не страшно, не грустно и никогда не одиноко. Это не питомец — это настоящий друг, который дарит сердце, не прося ничего взамен.</p>
+    <p><sus>Собачки</sus><txt> — одни из самых преданных животных на свете. Они чувствуют настроение хозяина, лают от радости, виляют хвостом и облизывают руки. Даже молча говорят: «Я с тобой». Собаки бывают разных пород: маленькие, как <size>той-терьеры</size>, и огромные, как <size>ньюфаундленды</size>. Одни — охранники, другие — компаньоны, третьи — помощники. Они учат нас ответственности, заботе и бескорыстной любви. Собака не смотрит на твои ошибки — она просто рядом. С ней не страшно, не грустно и никогда не одиноко. Это не питомец — это настоящий друг, который дарит сердце, не прося ничего взамен.</txt></p>
     <br>
     <br>
-    <nav>
     <a href="https://ru.pinterest.com/ideas/милые-собаки/959248151771/" target="_blank">Сайт c милыми собачками</a>
     <br>
     <a href="mailto:melnikova.1542@mail.ru">Написать письмо</a>
-    </nav>
+    <h3>А также:</h3>
+    <a href='about.html'>О дрессировке собак</a>
 </body>
+</html>
