Optimization, bug fixes, and adding new links

--- a/about.html
+++ b/about.html
@@ -9,23 +9,23 @@
     <h1>Обучение и дрессировка</h1>
     <img src="image/dog2.jpg" style="float: left; margin: 0 30px 20px 0;" width="30%">
     <h2>Базовые команды:</h2>
-    <ul><i>
-      <li><excerpt>Кличка</excerpt></li>
-      <li><excerpt>Ко мне</excerpt></li>
-      <li><excerpt>Фу и Нельзя</excerpt></li>
-      <li><excerpt>Сидеть</excerpt></li>
-      <li><excerpt>Лежать</excerpt></li>
-      <li><excerpt>Рядом</excerpt></li>
-      <li><excerpt>Гуляй</excerpt></li>
-      <li><excerpt>Барьер</excerpt></li>
-      <li><excerpt>Место</excerpt></li>
-      <li><excerpt>Апорт</excerpt></li>
-      <li><excerpt>Обойди</excerpt></li>
-      <li><excerpt>Домой</excerpt></li>
-      <li><excerpt>Брось</excerpt></li>
-      <li><excerpt>Ап</excerpt></li>
-      <li><excerpt>Ногу</excerpt></li>
-  </i></ul>
+    <ul><i><excerpt>
+      <li>Кличка</li>
+      <li>Ко мне</li>
+      <li>Фу и Нельзя</li>
+      <li>Сидеть</li>
+      <li>Лежать</li>
+      <li>Рядом</li>
+      <li>Гуляй</li>
+      <li>Барьер</li>
+      <li>Место</li>
+      <li>Апорт</li>
+      <li>Обойди</li>
+      <li>Домой</li>
+      <li>Брось</li>
+      <li>Ап</li>
+      <li>Ногу</li>
+    </excerpt></i></ul>
   <br>
   <br>
   <img src="https://i.pinimg.com/736x/ed/50/4b/ed504b97709bd18817daa39264f0d60a.jpg" style="float: right; margin: 0 30px 20px 0;" width="35%">
@@ -37,5 +37,9 @@
   <a href="mailto:melnikova.1542@mail.ru">Написать письмо</a>
   <h3>А также:</h3>
   <a href='index.html'>О собаках</a>
+  <br>
+  <a href="https://pluzhnikvr03.github.io/hello-piglet/">Немного о свинках</a>
+  <br>
+  <a href="https://ankadon.github.io/hello-kitty/">Немного о котиках</a>
   </body>
 </html>
