--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <h1>Собаки</h1>
     <img src="image/dog.jpg" style="float: left; margin: 0 30px 20px 0;" width="30%">
     <h2>Самые популярные породы собачек:</h2>
-    <ol><i>
-        <li><excerpt>Немецкий шпиц</excerpt></li>
-        <li><excerpt>Чихуахуа</excerpt></li>
-        <li><excerpt>Вельш-корги пемброк</excerpt></li>
-        <li><excerpt>Немецкая овчарка</excerpt></li>
-        <li><excerpt>Йоркширский терьер</excerpt></li>
-        <li><excerpt>Лабрадор-ретривер</excerpt></li>
-        <li><excerpt>Среднеазиатская овчарка</excerpt></li>
-        <li><excerpt>Джек-рассел-терьер</excerpt></li>
-        <li><excerpt>Французский бульдог</excerpt></li>
-        <li><excerpt>Пудель</excerpt></li>
-        <li><excerpt>Кавалер-кинг-чарльз-спаниель</excerpt></li>
-        <li><excerpt>Сиба</excerpt></li>
-        <li><excerpt>Золотистый ретривер</excerpt></li>
-        <li><excerpt>Ротвейлер</excerpt></li>
-        <li><excerpt>Бигль</excerpt></li>
-    </i></ol>
+    <ol><i><excerpt>
+        <li>Немецкий шпиц</li>
+        <li>Чихуахуа</li>
+        <li>Вельш-корги пемброк</li>
+        <li>Немецкая овчарка</li>
+        <li>Йоркширский терьер</li>
+        <li>Лабрадор-ретривер</li>
+        <li>Среднеазиатская овчарка</li>
+        <li>Джек-рассел-терьер</li>
+        <li>Французский бульдог</li>
+        <li>Пудель</li>
+        <li>Кавалер-кинг-чарльз-спаниель</li>
+        <li>Сиба</li>
+        <li>Золотистый ретривер</li>
+        <li>Ротвейлер</li>
+        <li>Бигль</li>
+    </excerpt></i></ol>
     <br>
     <br>
     <img src="https://sun9-25.userapi.com/s/v1/if2/bH9_JHkW42WWW4LwW6YaKShkCjKbcmrf2dO1rxG_DionCI2KA1ADckBSePn5aEOm5sUGa6bGV23iuGjsMCtl5ci5.jpg?quality=96&as=32x24,48x36,72x54,108x81,160x120,240x180,360x270,480x360,540x405,640x480,720x540,807x605&from=bu&cs=640x0" style="float: right; margin: 0 30px 20px 0;" width="35%">
@@ -37,5 +37,9 @@
     <a href="mailto:melnikova.1542@mail.ru">Написать письмо</a>
     <h3>А также:</h3>
     <a href='about.html'>О дрессировке собак</a>
+    <br>
+    <a href="https://pluzhnikvr03.github.io/hello-piglet/">Немного о свинках</a>
+    <br>
+    <a href="https://ankadon.github.io/hello-kitty/">Немного о котиках</a>
 </body>
 </html>
